# ai-shepherd

./: .gitignore  AGENTS.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
documentation/: initial-spec.md  open-session-detection.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  platform.rs  terminal.rs  usage.rs
src/types/: index.ts
