[package]
name = "ai-shepherd"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_shepherd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
which = "7"
